Counts time and prints time and date onto the serial monitor.

--- a/arduread/arduread.html
+++ b/arduread/arduread.html
@@ -29,7 +29,7 @@
 
 <template name="alarmClock">
     <form>
-		<input type="time" name="alarm">
+		<input type="datetime-local" name="alarm">
 		<input type="submit" value="Set Alarm">
     </form>
 </template>
