Basic Milestone 4: Alarm Clock

--- a/arduread/arduread.html
+++ b/arduread/arduread.html
@@ -29,7 +29,9 @@
 
 <template name="alarmClock">
     <form>
-		<input type="datetime-local" name="alarm">
-		<input type="submit" value="Set Alarm">
+        <input type="datetime-local" name="alarm">
+        <br>
+            <input type="submit" value="Set">
+            <input type="button" class="stop" value="Stop">        
     </form>
 </template>
