Intermediate Milestone 1: RGB Light

--- a/arduread/arduread.html
+++ b/arduread/arduread.html
@@ -35,3 +35,42 @@
             <input type="button" class="stop" value="Stop">        
     </form>
 </template>
+
+<template name="weather">
+  Weather App
+    <p>
+        
+        {{val}}
+    </p>
+</template>
+
+<template name="nine">
+    <body style="background-color:#000000;">
+        nine
+    </body>
+</template>
+
+<template name="seven">
+    <body style="background-color:#333333;">
+        seven
+    </body>
+</template>
+
+<template name="five">
+    <body style="background-color:#666666;">
+        five
+    </body>
+</template>
+
+<template name="three">
+    <body style="background-color:#CCCCCC;">
+        three
+    </body>
+</template>
+
+<template name="one">
+    <body style="background-color:#FFFFFF;">
+        one
+    </body>
+    
+</template>
